<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/storage_settings">
        <Preference
            app:key="game_path"
            app:title="@string/game_data_location"
            app:summary="Storage path will be updated automatically" />
            
        <SwitchPreferenceCompat
            app:key="storage_toggle"
            app:title="@string/toggle_storage_location"
            app:summaryOn="@string/using_internal_storage"
            app:summaryOff="@string/using_external_storage"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/global_settings">
        <Preference
            app:key="global_arguments"
            app:title="@string/global_command_line"
            app:summary="set any arguments" />

        <Preference
            app:key="render_resolution"
            app:title="@string/render_resolution"
            app:summary="@string/render_resolution_summary" />

        <SwitchPreferenceCompat
            app:key="stretch_resolution"
            app:title="@string/stretch_resolution"
            app:summary="@string/stretch_resolution_summary"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="keyboard_resizes_screen"
            app:title="@string/keyboard_resizes_screen"
            app:summary="@string/keyboard_resizes_screen_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="fix_font"
            app:title="@string/fix_font"
            app:summary="@string/fix_font_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="enable_downloader"
            app:title="@string/enable_downloader"
            app:summary="@string/enable_downloader_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="enable_yapb_bots"
            app:title="@string/game_settings_yapb_bots"
            app:defaultValue="false" />

        <ListPreference
            app:key="msaa"
            app:layout="@layout/list_preference"
            app:title="@string/msaa"
            app:entries="@array/msaa_entries"
            app:entryValues="@array/msaa_values"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="vsync"
            app:layout="@layout/switch_preference"
            app:title="@string/vsync"
            app:summary="@string/vsync_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
