<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<com.google.android.material.textview.MaterialTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="16dp"
			android:paddingTop="16dp"
			android:paddingBottom="8dp"
			android:text="@string/downloader_battery_optimization_note"
			android:textAppearance="?attr/textAppearanceBodyMedium" />

		<LinearLayout
			android:id="@+id/gameList"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:paddingHorizontal="16dp" />

		<LinearLayout
			android:id="@+id/downloadProgressContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="16dp"
			android:visibility="gone">

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/downloaderStatus"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/downloading_listing"
				android:textAppearance="?attr/textAppearanceBodyMedium" />

			<com.google.android.material.progressindicator.LinearProgressIndicator
				android:id="@+id/downloaderProgress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:indeterminate="true" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/cancelButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/cancel"
				style="@style/Widget.Material3.Button.TextButton" />

		</LinearLayout>

	</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
